fix overscroll on iphone

--- a/imports/components/DoorComponent.import.styl
+++ b/imports/components/DoorComponent.import.styl
@@ -5,15 +5,16 @@
   overflow hidden
 
   svg
-    position absolute
+    position fixed
     top 50%
     left 50%
     transform translate(-50%, -50%)
     display inline-block
     overflow hidden
-    height 100vh
-    padding 50px 0
+    height 100%
     user-select none
+    @media notmobile
+      padding 50px 0
 
     .stroke
       stroke #1d1d1b
